[package]
name = "yew-router-nested-macro"
version = "0.16.1"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Contains macros used with yew-router-nested"
repository = "https://github.com/ctron/yew-router"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.2"
quote = "1.0.1"
yew-router-route-parser = { version = "^0.16.0", path = "../yew-router-nested-route-parser", package = "yew-router-nested-route-parser" }
proc-macro2 = "1.0.1"

[dev-dependencies]
#yew-router = { version = "0.16.0", path = "../yew-router-nested", package = "yew-router-nested" } # This should probably be removed, it makes the deploy process much more annoying.
